istio/base/ingress.yaml
---
# Source: gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingress
  namespace: istio-system
  labels:
    app.kubernetes.io/name: istio-ingress
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "istio-ingress"
    app.kubernetes.io/part-of: "istio"
    app.kubernetes.io/version: "1.29.1"
    helm.sh/chart: gateway-1.29.1
    app: istio-ingress
    istio: ingress
    "istio.io/dataplane-mode": "none"
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.iqbalhakim.live,argocd.iqbalhakim.live
    tailscale.com/expose: "true"
    tailscale.com/hostname: "iqbalhakim-ingress"

spec:
  type: LoadBalancer
  ports:
    - name: status-port
      port: 15021
      protocol: TCP
      targetPort: 15021
    - name: http2
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: istio-ingress
    istio: ingress
---
# Source: gateway/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingress
  namespace: istio-system
  labels:
    app.kubernetes.io/name: istio-ingress
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "istio-ingress"
    app.kubernetes.io/part-of: "istio"
    app.kubernetes.io/version: "1.29.1"
    helm.sh/chart: gateway-1.29.1
    app: istio-ingress
    istio: ingress
    "istio.io/dataplane-mode": "none"
  annotations:
    {}
spec:
  selector:
    matchLabels:
      app: istio-ingress
      istio: ingress
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15020"
        prometheus.io/scrape: "true"
        sidecar.istio.io/inject: "true"
      labels:
        sidecar.istio.io/inject: "true"
        app: istio-ingress
        istio: ingress
        app.kubernetes.io/name: istio-ingress
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/instance: "istio-ingress"
        app.kubernetes.io/part-of: "istio"
        app.kubernetes.io/version: "1.29.1"
        helm.sh/chart: gateway-1.29.1
        "istio.io/dataplane-mode": "none"
    spec:
      serviceAccountName: istio-ingress
      securityContext:
        # Safe since 1.22: https://github.com/kubernetes/kubernetes/pull/103326
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "0"
      containers:
        - name: istio-proxy
          # "auto" will be populated at runtime by the mutating webhook. See https://istio.io/latest/docs/setup/additional-setup/sidecar-injection/#customizing-injection
          image: auto
          securityContext:
            capabilities:
              drop:
              - ALL
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsUser: 1337
            runAsGroup: 1337
            runAsNonRoot: true
          ports:
          - containerPort: 15090
            protocol: TCP
            name: http-envoy-prom
          resources:
            limits:
              cpu: 2000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi
      terminationGracePeriodSeconds: 30
---
# Source: gateway/templates/zzz_profile.yaml
#  Flatten globals, if defined on a per-chart basis
